Fixed test class issue

--- a/src/main/metadata/classes/VehicleRelationshipHelperJPTest.cls
+++ b/src/main/metadata/classes/VehicleRelationshipHelperJPTest.cls
@@ -32,7 +32,7 @@ public with sharing class VehicleRelationshipHelperJPTest{
            createTestData(today, today.addDays(1));          
            test.StartTest();         
            vehicle_relationship = new Vehicle_Relationship__c(Contact__c=testAccount.Id, Start_Date__c=today, End_Date__c=today.addDays(1), End_Reason__c = 'DMS');
-           vrHelperJP.validateOverlappingVehicleRelationshiponInsert(new List<Vehicle_Relationship__c>{vehicle_relationship});
+           VehicleRelationshipHelperJP.validateOverlappingVehicleRelationshiponInsert(new List<Vehicle_Relationship__c>{vehicle_relationship});
            list_VR = [Select Id from Vehicle_Relationship__c Where Contact__c =: testAccount.Id];
            system.assertNotEquals(list_VR, null);
            test.StopTest();
@@ -45,7 +45,7 @@ public with sharing class VehicleRelationshipHelperJPTest{
            createTestData(today, today.addDays(1));          
            test.StartTest();
            vehicle_relationship = new Vehicle_Relationship__c(Contact__c=testAccount.id, Start_Date__c=today, End_Date__c=today.addDays(2), End_Reason__c = 'DMS');
-           vrHelperJP.validateOverlappingVehicleRelationshiponInsert(new List<Vehicle_Relationship__c>{vehicle_relationship});
+           VehicleRelationshipHelperJP.validateOverlappingVehicleRelationshiponInsert(new List<Vehicle_Relationship__c>{vehicle_relationship});
            list_VR = [Select Id from Vehicle_Relationship__c Where Contact__c =: testAccount.Id];
            system.assertNotEquals(list_VR, null);
            test.StopTest();
@@ -55,7 +55,7 @@ public with sharing class VehicleRelationshipHelperJPTest{
            Test.startTest();
               
                VehicleRelationshipHelperJP vrjpObj = new VehicleRelationshipHelperJP();
-               vrjpObj.validateOverlappingVehicleRelationshiponInsert(vrlst);
+               VehicleRelationshipHelperJP.validateOverlappingVehicleRelationshiponInsert(vrlst);
                system.assertNotEquals(vrjpObj ,null);
            Test.stopTest();
        }
